<resources>
    <string name="app_name">Search with GPS</string>
    <string name="action_settings">Settings</string>
    <string name="permissaoGPS">Grant GPS Permission</string>
    <string name="ativaGPS">Enable GPS</string>
    <string name="desativaGPS">Disable GPS</string>
    <string name="iniciaPercurso">Start Route</string>
    <string name="finalizaPercurso">Finish Course</string>
    <string name="textoBusca">What Do You Want To Look For?</string>
    <string name="busca">Places</string>
    <string name="withoutgps">GPS Off</string>
    <string name="cliquegps">Click to Activate GPS</string>
    <string name="gpsoff">GPS is off</string>
    <string name="semGPS">With GPS inactive it is impossible</string>
</resources>
