<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:layout_row="6"
    android:layout_column="2"
    android:layout_margin="20dp"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/botaoPermissao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_margin="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:background="#008B8B"
        android:padding="12dp"
        android:text="@string/permissaoGPS" />

    <Button
        android:id="@+id/botaoAtiva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="12dp"
        android:background="#008B8B"
        android:padding="12dp"
        android:text="@string/ativaGPS" />

    <Button
        android:id="@+id/botaDesativa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_margin="12dp"
        android:background="#008B8B"
        android:padding="12dp"
        android:text="@string/desativaGPS" />

    <Button
        android:id="@+id/botaoInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="12dp"
        android:background="#008B8B"
        android:padding="12dp"
        android:text="@string/iniciaPercurso" />

    <Button
        android:id="@+id/botaoFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        android:background="#008B8B"
        android:padding="10dp"
        android:text="@string/finalizaPercurso" />

    <EditText
        android:id="@+id/textoBusca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="0"
        android:inputType="textPostalAddress"
        android:text="@string/textoBusca" />

</GridLayout>